updating source/target for java 7, removing permsize args (removed in java 8), fixing test